--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">F<span class="text-primary">or</span></h1>
-                    <div class="subheading mb-5">Data Analyst / Digital Marketing</div>
+                    <div class="subheading mb-5">An enthusiast about <br>Behavioral Economics <br>Customer Experience <br>Data Driven Marketing</div>
                     <p class="lead mb-5"></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/ADataAnalyst/Notes"><i class="fab fa-github"></i></a>
