--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">I<span class="text-primary">’m</span></h1>
+                    <h1 class="mb-0">I <span class="text-primary">am</span></h1>
                     <div class="subheading mb-5">An enthusiast about <br>Behavioral Economics <br>Customer Experience <br>Data Driven Marketing</div>
                     <p class="lead mb-5"></p>
                     <div class="social-icons">
