--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">Resume</span></a
-            ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"><span class="d-block d-lg-none">Resume</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
@@ -112,7 +111,7 @@
                     <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Designer
+                            <span class="fa-li"><i class="fas fa-minus"></i>Affinity Designer</span>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Photo
@@ -152,10 +151,10 @@
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Google Ads Certification
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Google Ads certification
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Google Analytics Certification
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Google Analytics certification
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>University of Arts London <br>- course programme in Fashion Business
