--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-minus"></i>Affinity Designer</span>
+                            <span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Designer
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Photo
