--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">I<span class="text-primary">’m</span></h1>
-                    <div class="subheading mb-5">An enthusiast about <br>Behavioral Economics <br>Customer Experience <br>Data Driven Marketing</div>
+                    <div class="subheading mb-5">An enthusiast about <br>Behavioral Economics <br>Customer Experience <br>Data-Driven Marketing</div>
                     <p class="lead mb-5"></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/ADataAnalyst/Notes"><i class="fab fa-github"></i></a>
@@ -110,12 +110,8 @@
                     </ul>
                     <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Designer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Photo
-                        </li>
+                        <li><span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Designer</li>
+                        <li><span class="fa-li"><i class="fas fa-minus"></i></span>Affinity Photo</li>
                     </ul>
                 </div>
             </section>
@@ -125,22 +121,12 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Personality</h2>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="far fa-circle"></i></span>Novelty
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="far fa-circle"></i></span>Curiosity
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="far fa-circle"></i></span>Perspective
-                        </li>
+                        <li><span class="fa-li"><i class="far fa-circle"></i></span>Novelty</li>
+                        <li><span class="fa-li"><i class="far fa-circle"></i></span>Curiosity</li>
+                        <li><span class="fa-li"><i class="far fa-circle"></i></span>Perspective</li>
 
-                        <li>
-                            <span class="fa-li"><i class="far fa-circle"></i></span>Diversity
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="far fa-circle"></i></span>Authenticity
-                        </li>
+                        <li><span class="fa-li"><i class="far fa-circle"></i></span>Diversity</li>
+                        <li><span class="fa-li"><i class="far fa-circle"></i></span>Authenticity</li>
                     </ul>
                 </div>
             </section>
@@ -150,15 +136,9 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Google Ads certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Google Analytics certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>University of Arts London <br>- course programme in Fashion Business
-                        </li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Google Ads certification</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Google Analytics certification</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>University of Arts London <br>- course programme in Fashion Business</li>
                     </ul>
                 </div>
             </section>
