--- a/index.html
+++ b/index.html
@@ -92,13 +92,12 @@
       <section class="resume-section" id="skills">
         <div class="resume-section-content">
           <h2 class="mb-5">Skills</h2>
-          <div class="subheading mb-3">Programming Languages</div>
+          <div class="subheading mb-3"><span class="text-primary">Programming Languages</span></div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item"><i class="fab fa-python"></i></li>
             <li class="list-inline-item"><i class="fab fa-html5"></i></li>
             <li class="list-inline-item"><i class="fab fa-markdown"></i></li>
           </ul>
-          <br />
           <br />
           <div class="subheading mb-3">Data Science</div>
           <ul class="fa-ul mb-0">
