--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container-fluid p-0">
       <section class="resume-section" id="about">
         <div class="resume-section-content">
-          <h1 class="mb-0">I<span class="text-primary">’m</span></h1>
+          <h1 class="mb-0">I <span class="text-primary">Am</span></h1>
           <div class="subheading mb-5">An Enthusiast About <br />Behavioral Economics <br />Customer Experience <br />Data-Driven Marketing</div>
           <p class="lead mb-5"></p>
           <div class="social-icons">
