--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <div class="subheading mb-3"><span class="text-primary">La-Fu Co., Ltd.</span></div>
               <p>Operating the Google Ads. <br />Assisting business operation.</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">July 2014 - February 2015</span></div>
+            <div class="flex-shrink-0">July 2014 - February 2015</div>
           </div>
           <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="flex-grow-1">
