--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="container-fluid p-0">
       <section class="resume-section" id="about">
         <div class="resume-section-content">
-          <h1 class="mb-0">I <span class="text-primary">Am</span></h1>
-          <div class="subheading mb-5">An Enthusiast About <br />Behavioral Economics <br />Customer Experience <br />Data-Driven Marketing</div>
+          <h1 class="mb-0">I'm</h1>
+          <div class="subheading mb-5"><span class="text-primary">A</span>n Enthusiast About <br /><span class="text-primary">B</span>ehavioral Economics <br /><span class="text-primary">C</span>ustomer Experience <br /><span class="text-primary">D</span>ata-Driven Marketing</div>
           <p class="lead mb-5"></p>
           <div class="social-icons">
             <a class="social-icon" href="https://github.com/ADataAnalyst/Notes"><i class="fab fa-github"></i></a>
