--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@
           <h2 class="mb-5">Education</h2>
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-              <h3 class="mb-0">Kao-Yuan University</h3>
-              <div class="subheading mb-3"><span class="text-primary">Associate of Applied Foreign Languages</span></div>
+              <h3 class="mb-0">Associate of Applied Foreign Languages</h3>
+              <div class="subheading mb-3"><span class="text-primary">Kao-Yuan University</span></div>
               <p>- English & Business</p>
             </div>
             <div class="flex-shrink-0">September 2000 - June 2003</div>
           </div>
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-              <h3 class="mb-0">Kao-Yuan Vocational High School</h3>
-              <div class="subheading mb-3"><span class="text-primary">Electronic Engineering</span></div>
+              <h3 class="mb-0">Electronic Engineering</h3>
+              <div class="subheading mb-3"><span class="text-primary">Kao-Yuan Vocational High School</span></div>
               <p>- Electronics & Computer Science</p>
             </div>
             <div class="flex-shrink-0">September 1997 - June 1999</div>
           </div>
           <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="flex-grow-1">
-              <h3 class="mb-0">Hai-Cing Vocational High School</h3>
-              <div class="subheading mb-3"><span class="text-primary">Data Processing</span></div>
+              <h3 class="mb-0">Data Processing</h3>
+              <div class="subheading mb-3"><span class="text-primary">Hai-Cing Vocational High School</span></div>
               <p>- Statistics & Computer Operation</p>
             </div>
             <div class="flex-shrink-0">September 1996 - June 1997</div>
