--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             I<span class="text-primary">'</span>m
           </h1>
           <div class="subheading mb-5">
-            An Enthusiast About <br />Behavioral Economics <br />Customer Experience <br />Data-Driven Marketing
+            <span class="text-primary">A</span>n Enthusiast About <br /><span class="text-primary">B</span>ehavioral Economics <br /><span class="text-primary">C</span>ustomer Experience <br /><span class="text-primary">D</span>ata-Driven Marketing
           </div>
           <p class="lead mb-5"></p>
           <div class="social-icons">
@@ -108,7 +108,7 @@
           <div class="subheading mb-3">Marketing</div>
           <ul class="fa-ul mb-0">
             <li>
-              <span class="fa-li"><i class="far fa-circle"></i></span>
+              <span class="text-primary"><i class="far fa-circle"></i></span>
               Persona
             </li>
             <li>
