--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             I<span class="text-primary">'</span>m
           </h1>
           <div class="subheading mb-5">
-            <span class="text-primary">A</span>n Enthusiast About <br /><span class="text-primary">B</span>ehavioral Economics <br /><span class="text-primary">C</span>ustomer Experience <br /><span class="text-primary">D</span>ata-Driven Marketing
+            <span class="text-primary">A</span>n Enthusiast About <br />
+            <span class="text-primary">B</span>ehavioral Economics <br />
+            <span class="text-primary">C</span>ustomer Experience <br />
+            <span class="text-primary">D</span>ata-Driven Marketing
           </div>
           <p class="lead mb-5">
 
@@ -204,7 +207,8 @@
               <span class="fa-li">
                 <i class="fas fa-check"></i>
               </span>
-              University of Arts London <br />- course programme in Fashion Business
+              University of Arts London <br />
+              - course programme in Fashion Business
             </li>
           </ul>
         </div>
