--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Assistant</h3>
               <div class="subheading mb-3">La-Fu Co., Ltd.</div>
-              <p>- Operating the Google Ads. <br />- Assisting business operation.</p>
+              <p>
+                - Operating the Google Ads. <br />
+                - Assisting business operation.
+              </p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">July 2014 - February 2015</span>
@@ -79,7 +82,10 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Deputy Account Manager</h3>
               <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
-              <p>- Executing process of civil lawsuit and judicial attachment. <br />- Communicating with customers.</p>
+              <p>
+                - Executing process of civil lawsuit and judicial attachment. <br />
+                - Communicating with customers.
+              </p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">March 2006 - July 2010</span>
