--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
           </li>
+
+          <li class="nav-item">
+            Portfolios
+            - <a class="nav-link js-scroll-trigger" href="portfolios/portfolio_1.html">1</a> / 
+          </li>
+
         </ul>
       </div>
     </nav>
