--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
           </li>
 
           <li class="nav-item">
-            Portfolios
-            - <a class="nav-link js-scroll-trigger" href="portfolios/portfolio_1.html">1</a> / 
+            <a class="nav-link js-scroll-trigger" href="#links">Links</a>
           </li>
 
         </ul>
@@ -221,6 +220,60 @@
               </span>
               University of Arts London <br />
               - course programme in Fashion Business
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <hr class="m-0" />
+      <section class="resume-section" id="links">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Links</h2>
+          <div class="subheading mb-3">Notes</div>
+
+          <div class="social-icons">
+            <a class="social-icon" href="https://github.com/ADataAnalyst/Notes">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+
+          <ul class="list-inline dev-icons">
+            <li class="list-inline-item">
+              <i class="fab fa-python"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-html5"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-markdown"></i>
+            </li>
+          </ul>
+          <br />
+          <div class="subheading mb-3">Portfolios</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Portfolio 1
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Portfolio 2
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Portfolio 3
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Portfolio 4
             </li>
           </ul>
         </div>
